# sitemap-tools

./: .flake8  .pre-commit-config.yaml  .pre-commit-mypy.sh  .pre-commit-run.sh  CHANGELOG.md  Makefile  README.md  pyproject.toml
mc_sitemap_tools/: crawl.py  discover.py  parser.py
