[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sitemap-tools"
version = "1.1.0"
description='Media Cloud news sitemap tools'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "mediacloud-metadata==1.*",
    "requests",         # leave un-versioned so dependencies can sort of which version is best
]

[tool.mypy]
# from story-indexer, via rss-fetcher
# originally from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.flit.module]
name = "mc_sitemap_tools"

[project.optional-dependencies]
dev = [
    "pre-commit", "flake8", "mypy", "isort", "types-urllib3", "types-requests"
]
test = [ "pytest", "parameterized" ]

[project.urls]
"Homepage" = "https://mediacloud.org"
"Bug Tracker" = "https://github.com/mediacloud/sitemap-tools/issues"
"Source Code" = "https://github.com/mediacloud/sitemap-tools"
