[project]
name = "sitemap-tools"
version = "1.2.0"
description='Media Cloud news sitemap tools'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
#    "mediacloud-metadata>=1.1", # loose, since user may also have requirements
# TEMP:
    "mediacloud-metadata @ git+https://github.com/philbudne/metadata-lib@requests-arcana",
    "requests",         # leave un-versioned so dependencies can sort of which version is best
]

[tool.isort]
profile = "black"

[tool.mypy]
# from story-indexer, via rss-fetcher
# originally from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[project.optional-dependencies]
# additional dependencies required for development (outside of mypy)
# for pre-commit hook (and "make lint")
dev = [
    "pre-commit"
]
# dependencies for mypy under pre-commit private venv
# used by .pre-commit-run.sh (run from .pre-commit-config.yaml)
mypy = [
    "types-requests",
    "types-urllib3"
]

[project.urls]
"Homepage" = "https://mediacloud.org"
"Bug Tracker" = "https://github.com/mediacloud/sitemap-tools/issues"
"Source Code" = "https://github.com/mediacloud/sitemap-tools"
